Make token sign work

--- a/config/.env
+++ b/config/.env
@@ -1,8 +1,8 @@
 API_PORT=9000
-API_SECRET=lasdwasduhidy77h6c261c8t8
+API_SECRET_KEY=lasdwasduhidy77h6c261c8t8
 
 #DATABASE CONFIG
-DB_DRIVER=postgresql
+DB_DRIVER=mysql
 DB_USER=root
 DB_PASS=password
 DB_NAME=jwt_auth
