Change from mysql to postgresql

--- a/config/.env
+++ b/config/.env
@@ -2,9 +2,9 @@ API_PORT=9000
 API_SECRET_KEY=lasdwasduhidy77h6c261c8t8
 
 #DATABASE CONFIG
-DB_DRIVER=mysql
-DB_USER=root
-DB_PASS=password
+DB_DRIVER=postgres
+DB_USER=postgres
+DB_PASS=janelidze28
 DB_NAME=jwt_auth
 
 #REDIS
