Fix datavbase connection

--- a/config/.env
+++ b/config/.env
@@ -6,7 +6,8 @@ DB_DRIVER=postgres
 DB_USER=postgres
 DB_PASS=janelidze28
 DB_NAME=jwt_auth
-
+DB_HOST=localhost
+DB_PORT=5432
 #REDIS
 REDIS_URL=127.0.0.1
 REDIS_PORT=6379
